1999-08-06  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/libta/mimeheaders.c:
	    MIME-conversion labeling had problems after the new form
	    of 'Received:' production at the router.

	* smtpserver/smtpserver.c:
	    Added couple of  setvbuf()  calls for stdout, and stderr
	    at the beginning of the smtpserver main() program.  Story
	    is long about what and where...  look at the ZMailer list
	    archive about ccNotes gateway problem.

1999-08-03  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* lib/selfaddrs.c:
	    After example code at the list, did some of my own code tweaks
	    to do comparison of address (IPv4 or IPv6) only, not the entire
	    'struct sockaddr', which contains ports, and other things...
	    (The port might not necessarily be zero in all cases..)

	* proto/cf/aliases.cf, proto/cf/aliases-new.cf, router/functions.c:
	    A potential security problem in the scripts.  I wonder how the
	    "ancient" 2.2.1 did handle this one..  Introduced "cat" builtin
	    to be used within a sequence of:   runas $priv cat "$filepath"  ...
	    Now strategically placed symlinks can't be used to divulge file
	    contents whose access is prohibited from the symlink creator..

1999-07-20  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* configure.in:
	    Minor nit-pick in <sys/socket.h> study.. Must include <sys/types.h>
	    at first as in many systems all headers are not idemponent, and
	    thus have some pre-requisite headers for inclusion..

	* libsh/interpret.c, proto/cf/canon.cf:
	    Don't do implicite dequotation of quotefull strings in ssift and
	    tsift..  ( '"foo@bar"' -> 'foo@bar' )
	
1999-07-19  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* configure.in:
	    Instead  AC_CHECK_HEADER() use AC_CHECK_HEADERS() macro.
	    Former *should* work with single headers, but apparently not..

1999-07-19  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* Makefile.in:
	    Version 2.99.51

	* configure.in, smtpserver/Makefile.in, smtpserver/zpwmatch.c,