@@ -1,6 +1,6 @@
 %!PS-Adobe-3.0
 %%Creator: groff version 1.11
-%%CreationDate: Mon Jul 19 13:58:31 1999
+%%CreationDate: Sun Aug  8 23:11:57 1999
 %%DocumentNeededResources: font Times-Roman
 %%+ font Times-Bold
 %%+ font Times-Italic
@@ -603,13 +603,13 @@ BP
 (To be lenient)12 E 6(#o)144 144 S 6(nt)-6 G
 (hat detail, remove the "R" from "veR" string below:)-6 E 114(*9)144 156
 S(99 veR)-114 E/F2 9/Times-Bold@0 SF(TCP-WRAPPER AND SMTPSER)72 184.8 Q
-(VER)-.495 E F0 .443(If the ZMailer system is con\214gured with tcp-wra\
-pper code, then service-id "smtp-recei)108 196.8 R -.15(ve)-.25 G 2.943
-("i).15 G 2.943(sl)-2.943 G(ook)-2.943 E .443(ed for all)-.1 F
-(those addresses that are allo)108 208.8 Q(wed to feed smtp email in.)
--.25 E(Usually this mode of operation is not used, and "hosts.allo)108
-225.6 Q(w" \214le contains entry:)-.25 E(smtp-recei)113 242.4 Q .3 -.15
-(ve : A)-.25 H(LL@ALL).15 E(Alternati)108 259.2 Q -.15(ve)-.25 G(ly).15
+(VER)-.495 E F0 .221(If the ZMailer system is con\214gured with tcp-wra\
+pper code, then service-id "smtp-recei)108 196.8 R -.15(ve)-.25 G .221
+(r" is look).15 F .221(ed for all)-.1 F(those addresses that are allo)
+108 208.8 Q(wed to feed smtp email in.)-.25 E
+(Usually this mode of operation is not used, and "hosts.allo)108 225.6 Q
+(w" \214le contains entry:)-.25 E(smtp-recei)113 242.4 Q -.15(ve)-.25 G
+2.5(r:A).15 G(LL@ALL)-2.5 E(Alternati)108 259.2 Q -.15(ve)-.25 G(ly).15
 E 3.222(,a)-.65 G .723
 (ll the functions which tcp-wrapper could supply are also a)-3.222 F
 -.25(va)-.2 G .723(ilable thru the polic).25 F 3.223(yd)-.15 G(atabase)
